@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.desitashan"
-version="0.1.0"
+version="0.1.1"
 name="Desi Tashan"
 provider-name="gujal">
 <requires>
